cmake_minimum_required(VERSION 3.21)
project(offer)

set(CMAKE_CXX_STANDARD 14)

add_executable(offer001 offer突击001.cpp )
add_executable(offer002 offer突击002.cpp )
add_executable(offer003 offer突击003.cpp )
add_executable(offer004 offer突击004.cpp )
add_executable(offer005 offer突击005.cpp )
add_executable(offer006 offer突击006.cpp )
add_executable(offer007 offer突击007.cpp )
add_executable(offer008 offer突击008.cpp )